tests/semantic/valid/09_r2_function_param_in_body.hulk
function f(n) => n + 1;

print(f(2));
